@@ -94,7 +94,7 @@
   padding: 5px;
   padding-bottom: 50px !important;
   padding-top: 5px;
-  // width: 100%;
+  width: 100%;
 }
 
 @media only screen and (min-width: 1200px) {
